--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "request": "^2.81.0"
+    "mysql": "^2.13.0",
+    "mysql2": "^1.3.6",
+    "request": "^2.81.0",
+    "sequelize": "^4.3.1",
+    "serve-favicon": "~2.4.2"
   }
 }
